# markitdown

./: pyproject.toml
src/markitdown/: __init__.py  _markitdown.py
